--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             const submitButton = form.querySelector('.submit-button');
             
             // *** ¡IMPORTANTE! REEMPLAZA ESTA URL CON LA URL DE TU NUEVA IMPLEMENTACIÓN DE APPS SCRIPT ***
-            const GOOGLE_APPS_SCRIPT_URL = 'TU_URL_DE_APPS_SCRIPT'; 
+            const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzBMwKhDnFYxcRvKWLGDxNI0j3kYayaIJ3lIKwrojPyRzOgI2PzfIt8BZUZIFyAiFk-3A/exec'; 
 
             form.addEventListener('submit', async function(e) {
                 e.preventDefault();
