--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         }
 
         .nine-pointed-star {
-            width: 200px;
-            height: 200px;
-            animation: gentleRotate 20s linear infinite;
+            width: 1307px;
+            height: 170px;
+            animation: gentleRotate 3s linear infinite;
             filter: drop-shadow(0 0 20px rgba(212, 175, 55, 0.3));
         }
 
@@ -331,8 +331,8 @@
         </div>
         <div class="hero-content" style="position:relative; z-index:2;">
             <h1 class="hero-title serif">Conferencia de Enseñanza </h1>
-            <h2 class="hero-subtitle serif" style="font-size: 1.8rem; margin-bottom: 1rem; color: #fbfdff;">Conjunto
-                Sureste - 19 Octubre 2025</h2>
+            <h2 class="hero-subtitle serif" style="font-size: 1.8rem; margin-bottom: 1rem; color: #fbfdff;">
+                Conjunto Suroeste - 19 Octubre 2025</h2>
             <blockquote class="hero-quote serif">
                 "La diversidad en la familia humana debería ser la causa de amor y armonía,
                 como ocurre en la música donde muchas notas diferentes se mezclan juntas
@@ -387,26 +387,15 @@
             </p>
             <p style="font-size: 1.05rem; color: var(--color-text-dark); margin-bottom: 1rem;">
                 Os recordamos que para que el lugar donde se realizará el seminario pueda tener toda la información
-                con tiempo suficiente, podáis realizar la inscripción antes del <strong>26 de Septiembre
+                con tiempo suficiente, podáis realizar la inscripción antes del <strong>13 de Octubre
                 </strong>.
 
             </p>
              <p style="font-size: 1.05rem; color: var(--color-text-dark); margin-bottom: 1rem;">
-                En el evento tendremos un catering, el coste por participante se dirá el 
-                día de la reunión y la transferencia agradecemos que se realice a la cuenta que se indica a continuación, por favor colocar en el concepto  <strong> "su nombre  + conferencia sureste".</strong>
+                En el evento habrá comida y el coste medio por participante se compartirá el mismo día.
 
             </p>
-            <p style="font-size: 1.18rem; color: var(--color-text-dark); line-height: 1.7;">
-                        Datos bancarios
-                    </p>
-                    <br>
-                    <p style="font-size: 1.18rem; color: var(--color-text-dark); line-height: 1.7;">
-                         <strong> Titular:  </strong> <br>
-                             <strong> Consejo Regional del Sur  </strong>
-<br>
-                       <strong> Número de cuenta: </strong><br>
-                       <strong> ES81 0182 0741 8502 0158 7627 </strong>
-                    </p>
+           
             <p style="font-size: 1.05rem; color: var(--color-text-dark);">
                 Un cariñoso saludo
             </p>
