--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     <label for="conference" class="form-label">Conferencia a la que asistirá *</label>
                     <select id="conference" name="conference" class="form-select" required>
                         <option value="">Seleccione una conferencia</option>
-                        <option value="Lugar - Sevilla">Sevilla - Cortijo del Alamillo, 41970 Sevilla </option>
+                        <option value="Lugar - Sevilla">Sevilla - Cortijo del PARQUE ALAMILLO (SEVILLA) </option>
                     </select>
                 </div>
 
